fix: when select language, menu close and mobile and tablet white space removed

--- a/composer-base-components/ui/accordion/Accordion.module.scss
+++ b/composer-base-components/ui/accordion/Accordion.module.scss
@@ -16,7 +16,7 @@
 
        &.open{
         max-height: 500px;
-        overflow: scroll;
+        overflow-y: scroll;
        }
     }
 
